--- a/src/main/resources/functions.html
+++ b/src/main/resources/functions.html
@@ -1,6 +1,120 @@
 <html>
-  <body>
-    <h1>Functions</h1>
-    <p>sin(x)</p>
+  <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
+  </head>
+  <body style="font-family: serif;">
+    <div class="container">
+      <h1>Functions</h1>
+      <hr>
+
+      <h2>Variables</h2>
+
+      <table class="table table-bordered table-striped">
+        <tr>
+          <td width="180px"><b>x, y, z</b></td>
+          <td>Dimension/Coordinate variables.</td>
+        </tr>
+        <tr>
+          <td><b>d</b></td>
+          <td>Distance of the point of origin</td>
+        </tr>
+        <tr>
+          <td><b>a</b></td>
+          <td>Angle to the point of origin.</td>
+        </tr>
+        <tr>
+          <td><b>r</b></td>
+          <td>Randmon number within [0, 1]</td>
+        </tr>
+      </table>
+
+      <h2>Constants</h2>
+      <table class="table table-bordered table-striped">
+        <tr>
+          <td width="180px"><b>PI</b></td>
+          <td>The constant π (3.14159265), the ratio of the circumference to the diameter of a circle.</td>
+        </tr>
+        <tr>
+          <td><b>E</b></td>
+          <td>The exponential number e (2.718)</td>
+        </tr>
+      </table>
+
+      <h2>Elementary functions</h2>
+
+      <table class="table table-bordered table-striped">
+        
+        <tbody>
+          <tr>
+            <td width="180px"><b>sin(n)</b></td>
+            <td>The sine of <i>n</i> (in radians)</td>
+          </tr>
+          <tr>
+            <td><b>asin(n)</b></td>
+            <td>The inverse sine of <i>n</i> (in radians)</td>
+          </tr>
+          <tr>
+            <td><b>cos(n)</b></td>
+            <td>The cosine of <i>n</i> (in radians)</td>
+          </tr>
+          <tr>
+            <td><b>acos(n)</b></td>
+            <td>The inverse cosine of <i>n</i> (in radians)</td>
+          </tr>
+          <tr>
+            <td><b>tan(n)</b></td>
+            <td>The tangent of <i>n</i> (in radians)</td>
+          </tr>
+          <tr>
+            <td><b>atan(n)</b></td>
+            <td>Calculates the inverse tangent (arctangent) of <i>n</i>. Returns 
+              a value in the range -PI/2 through PI/2.</td>
+          </tr>
+          <tr>
+            <td><b>atan2(x,y)</b></td>
+            <td>Calculates the inverse tangent of <i>y/x</i> and returns an angle in the 
+              range -PI to PI, using the signs of the arguments to determine the quadrant. 
+              Multiply the result by 180/PI to convert to degrees.</td>
+          </tr>
+          <tr>
+            <td><b>abs(n)</b></td>
+            <td> the absolute value or modulus |x|</td>
+          </tr>
+          <tr>
+            <td><b>sqrt(n)</b></td>
+            <td>the square root of <i>n</i>. Returns NaN if <i>n</i> is less than zero.</td>
+          </tr>
+          <tr>
+            <td><b>log(n)</b></td>
+            <td>Returns the natural logarithm (base e) of <i>n</i>. Note that log10(n) = log(n)/log(10).</td>
+          </tr>
+          <tr>
+            <td><b>maxOf(n1, n2)</b></td>
+            <td>Returns the greater of two values.</td>
+          </tr>
+          <tr>
+            <td><b>minOf(n1, n2)</b></td>
+            <td>Returns the smaller of two values.</td>
+          </tr>
+          <tr>
+            <td><b>round(n)</b></td>
+            <td>Returns the closest integer to <i>n</i>.</td>
+          </tr>
+          <tr>
+            <td><b>exp(n)</b></td>
+            <td>Returns the exponential number e (i.e., 2.718...) raised to the power of <i>n</i>.</td>
+          </tr>
+          <tr>
+            <td><b>pow(base, exponent)</b></td>
+            <td>Returns the value of base raised to the power of exponent.</td>
+          </tr>
+        </tbody>
+      </table>
+
+      <p>You can also use other <a href="https://imagej.nih.gov/ij/developer/macro/functions.html" target="_blank">bulit in ImageJ Macro  Functions</a>.</p>
+
+
+    </div>
+
   </body>
 </html>
