update PI and typos

--- a/src/main/resources/functions.html
+++ b/src/main/resources/functions.html
@@ -32,7 +32,7 @@
       <table class="table table-bordered table-striped">
         <tr>
           <td width="180px"><b>PI</b></td>
-          <td>The constant π (3.14159265), the ratio of the circumference to the diameter of a circle.</td>
+          <td>The constant &#960; (3.14159265), the ratio of the circumference to the diameter of a circle.</td>
         </tr>
         <tr>
           <td><b>E</b></td>
@@ -78,43 +78,44 @@
           </tr>
           <tr>
             <td><b>abs(n)</b></td>
-            <td> the absolute value or modulus |x|</td>
+            <td>The absolute value or modulus |x|</td>
           </tr>
           <tr>
             <td><b>sqrt(n)</b></td>
-            <td>the square root of <i>n</i>. Returns NaN if <i>n</i> is less than zero.</td>
+            <td>The square root of <i>n</i>. Returns NaN if <i>n</i> is less than zero.</td>
           </tr>
           <tr>
             <td><b>log(n)</b></td>
-            <td>Returns the natural logarithm (base e) of <i>n</i>. Note that log10(n) = log(n)/log(10).</td>
+            <td>The natural logarithm (base e) of <i>n</i>. Note that log10(n) = log(n)/log(10).</td>
           </tr>
           <tr>
             <td><b>maxOf(n1, n2)</b></td>
-            <td>Returns the greater of two values.</td>
+            <td>The greater of two values.</td>
           </tr>
           <tr>
             <td><b>minOf(n1, n2)</b></td>
-            <td>Returns the smaller of two values.</td>
+            <td>The smaller of two values.</td>
           </tr>
           <tr>
             <td><b>round(n)</b></td>
-            <td>Returns the closest integer to <i>n</i>.</td>
+            <td>The closest integer to <i>n</i>.</td>
           </tr>
           <tr>
             <td><b>exp(n)</b></td>
-            <td>Returns the exponential number e (i.e., 2.718...) raised to the power of <i>n</i>.</td>
+            <td>The exponential number e (i.e., 2.718...) raised to the power of <i>n</i>.</td>
           </tr>
           <tr>
             <td><b>pow(base, exponent)</b></td>
-            <td>Returns the value of base raised to the power of exponent.</td>
+            <td>The value of base raised to the power of exponent.</td>
           </tr>
         </tbody>
       </table>
 
       <p>You can also use other <a href="https://imagej.nih.gov/ij/developer/macro/functions.html" target="_blank">bulit in ImageJ Macro  Functions</a>.</p>
-
-
+      
+      <footer class="text-muted">
+        <small>ImageJ plugin | Image-Synthesizer by Maximilian Maske</small>
+      </footer>
     </div>
-
   </body>
 </html>
