typo and new order

--- a/src/main/resources/functions.html
+++ b/src/main/resources/functions.html
@@ -24,7 +24,7 @@
         </tr>
         <tr>
           <td><b>r</b></td>
-          <td>Randmon number within [0, 1]</td>
+          <td>Random number within [0, 1]</td>
         </tr>
       </table>
 
@@ -67,7 +67,7 @@
           </tr>
           <tr>
             <td><b>atan(n)</b></td>
-            <td>Calculates the inverse tangent (arctangent) of <i>n</i>. Returns 
+            <td>Calculates the inverse tangent (arctangent) of <i>n</i>. Returns
               a value in the range -PI/2 through PI/2.</td>
           </tr>
           <tr>
@@ -79,6 +79,10 @@
           <tr>
             <td><b>abs(n)</b></td>
             <td>The absolute value or modulus |x|</td>
+          </tr>
+          <tr>
+            <td><b>pow(base, exponent)</b></td>
+            <td>The value of base raised to the power of exponent.</td>
           </tr>
           <tr>
             <td><b>sqrt(n)</b></td>
@@ -103,10 +107,6 @@
           <tr>
             <td><b>exp(n)</b></td>
             <td>The exponential number e (i.e., 2.718...) raised to the power of <i>n</i>.</td>
-          </tr>
-          <tr>
-            <td><b>pow(base, exponent)</b></td>
-            <td>The value of base raised to the power of exponent.</td>
           </tr>
         </tbody>
       </table>
