--- a/src/main/resources/functions.html
+++ b/src/main/resources/functions.html
@@ -1,5 +1,8 @@
 <html>
   <head>
+      <meta charset="UTF-8">
+      <meta name="author" content="Maximilian Maske">
+      <title>FIS Glossary</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
   </head>
   <body style="font-family: serif;">
@@ -114,7 +117,7 @@
       <p>You can also use other <a href="https://imagej.nih.gov/ij/developer/macro/functions.html" target="_blank">bulit in ImageJ Macro  Functions</a>.</p>
       
       <footer class="text-muted">
-        <small>ImageJ plugin | Image-Synthesizer by Maximilian Maske</small>
+        <small>ImageJ plugin | Function-Image-Synthesizer by Maximilian Maske</small>
       </footer>
     </div>
   </body>
