--- a/src/main/resources/functions.html
+++ b/src/main/resources/functions.html
@@ -26,7 +26,7 @@
           <td>Angle to the point of origin.</td>
         </tr>
         <tr>
-          <td><b>r</b></td>
+          <td><b>random</b></td>
           <td>Random number within [0, 1]</td>
         </tr>
       </table>
@@ -110,6 +110,10 @@
           <tr>
             <td><b>exp(n)</b></td>
             <td>The exponential number e (i.e., 2.718...) raised to the power of <i>n</i>.</td>
+          </tr>
+          <tr>
+            <td><b>getPixel(x, y)</b></td>
+            <td>Returns the value of the pixel at <i>(x,y)</i>. Note that pixels in RGB images contain red, green and blue components that need to be extracted using shifting and masking. See the Color Picker Tool macro for an example that shows how to do this.</td>
           </tr>
         </tbody>
       </table>
