--- a/src/main/resources/is-help.html
+++ b/src/main/resources/is-help.html
@@ -98,10 +98,6 @@
               Multiply the result by 180/PI to convert to degrees.</td>
           </tr>
           <tr>
-            <td><b>abs(n)</b></td>
-            <td>The absolute value or modulus |x|</td>
-          </tr>
-          <tr>
             <td><b>pow(base, exponent)</b></td>
             <td>The value of base raised to the power of exponent.</td>
           </tr>
@@ -122,12 +118,20 @@
             <td>The smaller of two values.</td>
           </tr>
           <tr>
-            <td><b>round(n)</b></td>
-            <td>The closest integer to <i>n</i>.</td>
-          </tr>
-          <tr>
             <td><b>exp(n)</b></td>
             <td>The exponential number e (i.e., 2.718...) raised to the power of <i>n</i>.</td>
+          </tr>
+          <tr>
+            <td><b>abs(n)</b></td>
+            <td>The absolute value or modulus |x|</td>
+          </tr>
+          <tr>
+            <td><b>floor(n)</b></td>
+            <td>Returns the largest value that is not greater than <i>n</i>.</td>
+          </tr>
+          <tr>
+            <td><b>round(n)</b></td>
+            <td>Returns the closest integer to <i>n</i>.</td>
           </tr>
           <tr>
             <td><b>getPixel(x, y)</b></td>
